# slater-libp2p-dead

./: README.md
sys/: go.mod  go.sum  main.go
sys/bridge/: bridge.go
sys/core/: auth.go  bootstrap.go  core.go  message.go  net.go  resumeSession.go  session.go  setup.go  setupDevice.go  setupUser.go  setup_test.go  slate.go  store.go  view.go
sys/core/msg/: horizon.go  message.go
sys/core/slate/: emitter.go  ephemeral.go  persistent.go  slate.go
sys/core/store/: store.go
sys/docs/: bridge.md
ui/src/: CMakeLists.txt  main.cpp  res.qrc
ui/src/qml/: Bridge.qml  Components.qml  CoreChoiceInput.qml  CoreSecretText.qml  CoreSecretTextInput.qml  CoreText.qml  CoreTextInput.qml  CoreWeb.qml  Element.qml  InputElement.qml  Slate.qml  Socket.qml  Style.qml  View.qml  main.qml
